0.3.1: Add max-width: 100% to search container rows so they wrap at narrow widths. * Sort buttons now wrap, but button text no longer wraps.

--- a/assets/scss/_search-sort-things.scss
+++ b/assets/scss/_search-sort-things.scss
@@ -5,53 +5,50 @@
   label {
     font-size: $font-size-sm;
   }
+}
 
-  .input__container {
+.thing-searcher {
+  max-width: 100%;
+  
+  .search-thing-input__container {
+    max-width: 100%;
     position: relative;
   }
-}
 
-
-.search-things-input {
-  padding-right: calc($font-size-normal + (1.5 * $spacing-xxs)) !important;
-}
-
-.clear-search-things {
-  background-color: transparent;
-  background-image: url("../images/close.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 75%;
-  border: none;
-  display: inline-block;
-  height: 1.25em;
-  line-height: 1;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-    top: 50%;
-    right: $spacing-xxs;
-  transform: translateY(-50%);
-  width: 1.25em;
-  box-shadow: none;
-
-  &:hover:not(:active),
-  &:active {
-    background-color: rgba(0, 0, 0, .1);
-    border: rgba(0, 0, 0, .25);
-    border-radius: 9999px;
+  .search-things-input {
+    padding-right: calc($font-size-normal + (1.5 * $spacing-xxs)) !important;
+  }
+  
+  .clear-search-things {
+    background-color: transparent;
+    background-image: url("../images/close.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 75%;
+    border: none;
+    display: inline-block;
+    height: 1.25em;
+    line-height: 1;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+      top: 50%;
+      right: $spacing-xxs;
+    transform: translateY(-50%);
+    width: 1.25em;
     box-shadow: none;
-    color: initial;
-  }
-
-  svg {
-    fill: rgba(0, 0, 0, .25);
-  }
-
-  &:hover,
-  &:focus {
-    svg {
-      fill: rgba(0, 0, 0, .5);
+  
+    &:hover:not(:active),
+    &:active {
+      background-color: rgba(0, 0, 0, .1);
+      border-radius: 9999px;
+      box-shadow: none;
     }
+  }
+}
+
+.thing-sorter {
+  .things-sort-button {
+    text-wrap: nowrap;
   }
 }
